[css] fix footnote contrast issue

--- a/css/code.css
+++ b/css/code.css
@@ -38,3 +38,7 @@ table {
 	word-wrap: break-word;
 }
 
+
+.footnote {
+	color: white;
+}
